fix navbar + vertical-align for inline elements

--- a/sass/_advantages.scss
+++ b/sass/_advantages.scss
@@ -53,6 +53,7 @@
     display: table-cell;
     width: 33.3%;
     padding: 5px 40px;
+    vertical-align:top;
   }
 }
 
