--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -28,6 +28,7 @@
       max-height: 500px;
       transition: none;
       display: flex;
+      flex-wrap: wrap;
     }
   }
 }
@@ -87,11 +88,11 @@
       }
     }
 
-    &:nth-child(3){
+    &:nth-child(2){
       margin-right:auto;
     }
 
-    &:nth-child(4){
+    &:nth-child(3){
       margin-left: auto;
     }
 
